--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
     <h1>Finite Automata Sandbox</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     <div id="canvas-container">
-      <div id="canvas"></div>
+      <canvas id="canvas"></canvas>
     </div>
     <p id="footer"> footer text footer text footer text footer text footer text footer text </p>
   </div>
